Fix up spacing with p

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@ a:hover {
 	color: #000000;
 }
 
-p { margin: 0px 0px 20px; }
+p { margin: 20px 0 20px 0; }
 p.copyright { margin: 0 0 20px; }
 ul, ol { padding: 0 0 0 30px; }
 ol li, ul li { margin-top: 1px; margin-bottom: 1px; }
